# Robotic_Cell_Simulation

./: README.md  Software_architecture.md  requirements.txt  run_all.sh  test_system.sh
robot_cell_ros2_pkg/robotic_cell_area_simulation/: CMakeLists.txt  package.xml
robot_cell_ros2_pkg/robotic_cell_area_simulation/launch/: cell_simulation.launch.py
robot_cell_ros2_pkg/robotic_cell_area_simulation/robotic_cell_area_simulation/: __init__.py
robot_cell_ros2_pkg/robotic_cell_area_simulation/scripts/: barcode_scanner.py  door_handler.py  emergency_button_handler.py  robotic_cell_simulator.py  stack_light_handler.py
wms_gui_pkg/: robot_cell_control.py  robot_cell_monitor.py  wms_server.py
